@@ -91,7 +91,7 @@ public class JUnitParameterMethodNotFound extends BugChecker implements MethodTr
             .filter(annotationTree -> PARAMETERS_ANNOTATION_MATCHER.matches(annotationTree, state))
             .findFirst();
 
-    if (!parametersAnnotation.isPresent()) {
+    if (parametersAnnotation.isEmpty()) {
       return Description.NO_MATCH;
     }
 
@@ -145,12 +145,12 @@ public class JUnitParameterMethodNotFound extends BugChecker implements MethodTr
     Optional<? extends AssignmentTree> paramSourceAssignmentTree =
         getParamAssignmentTree(annotationsArguments, /* parameterName= */ "source");
 
-    if (!paramSourceAssignmentTree.isPresent()) {
+    if (paramSourceAssignmentTree.isEmpty()) {
       return ImmutableSet.of();
     }
 
     ClassType classType = (ClassType) getType(paramSourceAssignmentTree.get().getExpression());
-    Type typeArgument = classType.getTypeArguments().get(0);
+    Type typeArgument = classType.getTypeArguments().getFirst();
     return getAllMethodIdentifiersForType(typeArgument, state);
   }
 
